@startuml

hide circle
skinparam classAttributeIconSize 0

title TripTop ApiGateway RequestInterceptor class diagram

interface GlobalFilter <<interface>> {
    + filter(ServerWebExchange exchange, GatewayFilterChain chain)
}
note "Komt van Spring Cloud Gateway" as filterNote

filterNote .. GlobalFilter

interface PriorityOrdered <<interface>> {
    + getOrder()
}

filterNote .. PriorityOrdered

class InboundRequestFilter {
}

interface IAuthStrategy <<interface>> {
    - boolean authenticate(Map<String, String> headers)
    - String getStrategyName()
}

class RestTemplate{
}

note "Komt van Spring Boot" as restTemplateNote
restTemplateNote .. RestTemplate

class AuthStrategyFactory {
    + IAuthStrategy getStrategy(String strategyType)
}

abstract class ApiAuthStrategy <<abstract class>> {
}

class MockAuthStrategy {}
class MockLocalAuthStrategy {}

note "Een voorbeeld auth strategy die gemaakt kan worden" as mockAuthStrategyNote
mockAuthStrategyNote ..left MockAuthStrategy
mockAuthStrategyNote ..left MockLocalAuthStrategy

InboundRequestFilter -up-^ GlobalFilter
InboundRequestFilter -up-^ PriorityOrdered
InboundRequestFilter --> "- authStrategyFactory" AuthStrategyFactory

AuthStrategyFactory ..> IAuthStrategy : <<creates>>
InboundRequestFilter ..> IAuthStrategy : <<uses>>

ApiAuthStrategy --> "- restTempalte" RestTemplate
ApiAuthStrategy -up-^ IAuthStrategy

MockAuthStrategy -up-^ ApiAuthStrategy
MockLocalAuthStrategy -up-^IAuthStrategy


@enduml